--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -85,7 +85,7 @@ li {
 }
 
 header {
-  background: #d6b6be;
+  background: #8e6875;
   display: flex;
   justify-content: center;
   padding: .75em;
@@ -111,7 +111,7 @@ header nav {
   text-align: left;
   top: 100%;
   left: 0;
-  background: #d6b6be;
+  background: #8e6875;
   width: 100%;
   transform: scale(1, 0);
   transform-origin: top;
@@ -124,7 +124,7 @@ header nav a {
   text-transform: uppercase;
   opacity: 0;
   transition: opacity 150ms ease-in-out;
-  color: #ffffff;
+  color: #fff;
   font-weight: bold;
   cursor: pointer;
 }
@@ -147,7 +147,7 @@ header nav a:hover {
 
 /* footer */
 footer {
-  background-color: #d6b6be;
+  background-color: #8e6875;
   display: flex;
   justify-content: space-between;
   padding-right: 2em;
